--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
+  "homepage": "https://anquavious.github.io/react.portfolio/",
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://anquavious.github.io/React.Portfolio/",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
